style: mobile menu overflow fixes

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -34,7 +34,7 @@ body {
         background-size: 100%;
         position: absolute;
         top: 50px;
-        width: 100vw;
+        width: 100%;
         left: 0;
     }
 }
@@ -578,7 +578,7 @@ footer {
             left: 0;
             position: fixed;
             z-index: 1000;
-            width: 100%;
+            width: 100vw;
             .hamburger-btn {
                 z-index: 5;
                 display: initial;
@@ -613,7 +613,7 @@ footer {
                 top: 20px;
                 height: calc(100vh - 20px);
                 padding: 5% 0;
-                width: 100%;
+                width: 100vw;
                 background-color: rgba($black, 0.95);
 
                 * {
